@@ -1,3 +1,7 @@
+2004-10-07  Don Porter  <dgp@users.sourceforge.net>
+
+	* generic/tclTest.c (TestsetobjerrorcodeCmd):  Simplified.
+
 2004-10-07  Vince Darley  <vincentdarley@users.sourceforge.net>
 
 	* generic/tclFileName.c:
